# apidocs/swagger.yaml
@@ -6,28 +6,10 @@ info:
 
     These API are used for interacting with information used for the Caring
     Calendar in compliance with standard REST specifications.
-  version: 1.0.0
+  version: 1.0.1
 servers:
   - url: 'https://api.caringfredericton.com/'
 paths:
-#  /guests/organizations:
-#    get:
-#      tags:
-#        - Guest View
-#      summary: Returns a list of all registered and verified organizations
-#      responses:
-#        '200':
-#          description: Paged object of organizations
-#          content:
-#            application/json:
-#              schema:
-#                $ref: '#/components/schemas/PagedGuestOrganization'
-#        '401':
-#          description: Authentication error
-#          content:
-#            application/json:
-#              schema:
-#                $ref: '#/components/schemas/AuthError'
   /guests/events:
     get:
       tags:
@@ -414,6 +396,30 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AuthError'
+      post:
+        tags:
+          - Organizations
+        summary: Sends a registration request for an organization
+        responses:
+          '201':
+            description: >-
+              The request was accepted in the system pending verification by the
+              System Administrator
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/OrganizationDetailsResponse'
+          '422':
+            description: Missing required parameters
+        requestBody:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrganizationRequest'
+          description: |
+            Organization registration request details
+          required: true
+
   /organizations/<org_id>:
     get:
       tags:
@@ -502,31 +508,6 @@ paths:
           description: Organization does not exist in the system
       requestBody:
         $ref: '#/components/requestBodies/VerificationDetails'
-
-  /organizations/register:
-    post:
-      tags:
-        - Organizations
-      summary: Sends a registration request for an organization
-      responses:
-        '201':
-          description: >-
-            The request was accepted in the system pending verification by the
-            System Administrator
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/OrganizationDetailsResponse'
-        '422':
-          description: Missing required parameters
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/OrganizationRequest'
-        description: |
-          Organization registration request details
-        required: true
 
   /users/<user_id>:
     get:
